<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapToSchedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_class_list_test">Class List</string>
    <string name="button">button</string>
    <string name="new_photo">New Photo</string>
    <string name="existing_photo">Existing Photo</string>
    <string name="confirm">Confirm</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">CynthiaCrescent</string><!-- placeholder name -->
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>

</resources>
