<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.snaptoschedule.ClassListTest" >
    
    <item android:id="@+id/action_confirm"
          android:title="@string/confirm"
          android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_help"/>

</menu>
