<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.snaptoschedule.MainActivity" >

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/gridLayout1"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/view1"
        android:columnCount="2" >

        <Button
            android:id="@+id/existing_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:background="@drawable/redbutton"
            android:onClick="startClassListTest"
            android:text="@string/existing_photo"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/new_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:background="@drawable/redbutton"
            android:onClick="startClassListTest"
            android:text="@string/new_photo"
            android:textColor="#FFFFFF" />

    </GridLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/profile_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/image" />

</RelativeLayout>